Bug 96536 - XServer Crashes on UnmapWindow with PointerGrab and Touch
Summary: XServer Crashes on UnmapWindow with PointerGrab and Touch
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Input/Core (show other bugs)
Version: 7.7 (2012.06)
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 105557 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-15 13:07 UTC by Gerhard Muehlbauer
Modified: 2018-11-12 22:08 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch to avoid segmentation fault (1.93 KB, patch)
2016-06-15 13:19 UTC, Gerhard Muehlbauer
no flags Details | Splinter Review
Backtace for segmantation fault (1.19 KB, text/plain)
2016-06-15 13:29 UTC, Gerhard Muehlbauer
no flags Details

Description Gerhard Muehlbauer 2016-06-15 13:07:31 UTC

    
Comment 1 Gerhard Muehlbauer 2016-06-15 13:19:38 UTC
Created attachment 124542 [details] [review]
Patch to avoid segmentation fault
Comment 2 Gerhard Muehlbauer 2016-06-15 13:28:01 UTC
A QT application that does QWidget::grabGesture() on a window that is shown/hidden by touch events to another button sometimes crashes the XServer in dix/events.c function DeactivatePointerGrab(). See attacked backtrace.
My assumption is that the pointer "grab" is no more valid after some calls to touch functions.
My patch checks if the pointer in mouse->device.grab is still the same after the touch treatment. If not, a message is printed and the new pointer is loaded.
The patch solves the  problem for me and sometimes prints out messages that show the object in *grab has been replaced.
I don't  know ifthe patch is the solution or just a workaround.
Comment 3 Gerhard Muehlbauer 2016-06-15 13:29:43 UTC
Created attachment 124543 [details]
Backtace for segmantation fault
Comment 4 Marco Trevisan (Treviño) 2018-10-27 03:13:05 UTC
I've proposed another solution for this bug: https://gitlab.freedesktop.org/xorg/xserver/merge_requests/61
Comment 6 Marco Trevisan (Treviño) 2018-11-12 22:08:45 UTC
*** Bug 105557 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.